[project]
name = "tempo-binary-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mythical-Github", email = "67753356+Mythical-Github@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "packaging>=26.1",
    "tempo-binary-tool-manager",
]

[project.scripts]
tempo-binary-tools = "tempo_binary_tools:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
tempo-binary-tool-manager = { git = "https://www.github.com/Tempo-Organization/tempo-binary-tool-manager" }

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.typos]
[tool.typos.default]
extend-words = { ue = "ue" }

[project.entry-points."tempo.tools"]
retoc = "tempo_binary_tools.retoc:RetocToolInfo"
repak = "tempo_binary_tools.repak:RepakToolInfo"
fmodel = "tempo_binary_tools.fmodel:FmodelToolInfo"
umodel = "tempo_binary_tools.umodel:UmodelToolInfo"
uasset_gui = "tempo_binary_tools.uasset_gui:UassetGuiToolInfo"
kismet_analyzer = "tempo_binary_tools.kismet_analyzer:KismetAnalyzerToolInfo"
injector = "tempo_binary_tools.injector:InjectorToolInfo"
spaghetti = "tempo_binary_tools.spaghetti:SpaghettiToolInfo"
stove = "tempo_binary_tools.stove:StoveToolInfo"
ue_vr = "tempo_binary_tools.ue_vr:UEVRToolInfo"
jmap = "tempo_binary_tools.jmap:JmapToolInfo"
patternsleuth = "tempo_binary_tools.patternsleuth:PatternsleuthToolInfo"
tempo_shell_scripts = "tempo_binary_tools.tempo_shell_scripts:TempoShellScriptsToolInfo"

[tool.ruff]
exclude = []

[tool.ruff.lint]
select = [
    "ANN",
    "PTH",
    "N",
    "BLE",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "COM",
    "C4",
    "EXE",
    "FA",
    "INT",
    "PIE",
    "T20",
    "PYI",
    "UP047"
]
